@@ -155,7 +155,8 @@ void NAngleStructureUI::refresh() {
     // Add the items in reverse order since the QListViewItem
     // constructor puts new items at the front.
     for (long i = nStructs - 1; i >= 0; i--)
-        new NAngleStructureItem(table, structures->getStructure(i));
+        new NAngleStructureItem(table, structures->getStructure(i),
+            structures->getTriangulation());
 
     setDirty(false);
 }
