@@ -53,6 +53,8 @@ Version 4.2  [ under development ]
           is uneditable.
         - Tighter thread safety in the GUI.  This is required because some
           calculations (such as surface enumeration) run in a separate thread.
+        - Worked around a Qt bug that caused a crash when pressing a key in
+          a table of normal surfaces or matching equations.
     TEST SUITE:
         - Added tests for SnapPea calculations.
         - Further additions to the triangulation tests, in particular
